Esto es el primer update
Martin

--- a/html/our_projects/productos.html
+++ b/html/our_projects/productos.html
@@ -504,13 +504,13 @@
 
                             <div id="filter-buttons-holder">
 
-                                <div class="filter-button" data-filter="animation">Ilusiones</div>
+                                <div class="filter-button" data-filter="animation">FOLDER ICONS</div>
 
-                                <div class="filter-button" data-filter="design">Emociones</div>
+                                <div class="filter-button" data-filter="design">SOCIAL NETWORKS </div>
 
-                                <div class="filter-button" data-filter="illustration">Personalidades</div>
+                                <div class="filter-button" data-filter="illustration">WALLPAPERS</div>
 
-                                <div class="filter-button" data-filter="photography">Face to Face</div>
+                                <div class="filter-button" data-filter="photography">POW</div>
 
                                 <div class="filter-button selected" data-filter="*">Ver Todos</div>
 
