--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
                             <div class="sub-menu-option-text"><a href="#ethics.html" data-path-href="html/about_us/">We’re Gideas </a></div>
 
                         </div>
-                         <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height">
+                          <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height">
 
-                            <div class="sub-menu-option-background"></div>
+                            <div class="sub-menu-option-background"> </div>
 
-                            <div class="sub-menu-option-text"><a href="#about_us.html" data-path-href="html/about_us/">P.OW. </a></div>
+                            <div class="sub-menu-option-text"><a href="#pow.html" data-path-href="html/about_us/">PO.W </a></div>
 
                         </div>
 
@@ -239,13 +239,13 @@
                 </div>
                <!-- Ends WWD4Y -->            
 
-                <div class="menu-option-holder" data-module-type="gallery" data-side="none">
+                  <div class="menu-option-holder" data-module-type="page_columns" data-side="custom">
 
                     <div id="menu-option-background" class="menu-option-background"> </div>
 
-                    <div id="menu-option-text" class="menu-option-text"><a href="#image_gallery.html" data-path-href="html/galleries/">TIENDA</a></div>
+                    <div id="menu-option-text" class="menu-option-text"><a href="#productos.html" data-path-href="html/our_projects/">STORE</a></div>
 
-                </div>                
+                </div>      
 
                 <div class="menu-option-holder" data-module-type="contact" data-side="custom">
 
