Cambios en Menu
Se cambió el nombre del menú ¿Qué hacemos? a What We Do 4 You? y se
agregaron subsecciones al mismo.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                 <div class="menu-option-holder">
 
-                    <div id="menu-option-background" class="menu-option-background"> </div>
+                    <div id="menu-option-background" class="menu-option-background"></div>
 
                     <div id="menu-option-text" class="menu-option-text">
                     <a href="#home_layout_1.html" data-path-href="html/home/"><img src="assets/media/head-robot.png" style="margin-top:-12px"></a>
@@ -203,13 +203,41 @@
 
                 </div> 
 
-                <div class="menu-option-holder" data-module-type="page_columns" data-side="custom">
-
-                    <div id="menu-option-background" class="menu-option-background"> </div>
-
-                    <div id="menu-option-text" class="menu-option-text"><a href="#3_columns_projects.html" data-path-href="html/our_projects/">¿QUÉ HACEMOS?</a></div>
-
-                </div>               
+               <!--Begin WWD4Y -->
+               <div class="menu-option-holder">
+                    <div class="menu-option-background"></div>
+                    <div class="menu-option-text">
+                    	<a data-path-href="html/contact/" href="#contact.html">What We Do 4 You?</a>
+                        <div class="menu-option-sign">+</div>
+                    </div>
+                    <div class="sub-menu-holder">
+                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text">
+                            	<a data-path-href="html/our_projects/" href="#4_columns_projects.html">High Impact</a>
+                            </div>
+                        </div>
+                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text">
+                            	<a data-path-href="html/our_projects/" href="#3_columns_projects.html">hiGh Interaction</a>
+                            </div>
+                        </div>
+                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text">
+                            	<a data-path-href="html/our_projects/" href="#2_columns_projects.html">hiGh Promotion</a>
+                            </div>
+                        </div>
+                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
+                           <div class="sub-menu-option-background"> </div>
+                           <div class="sub-menu-option-text">
+                               <a data-path-href="html/our_projects/" href="#2_columns_projects.html">higH Entertainment </a>
+                           </div>
+                        </div>
+                    </div>
+                </div>
+               <!-- Ends WWD4Y -->            
 
                 <div class="menu-option-holder" data-module-type="gallery" data-side="none">
 
