Martín Téllez Galindo
Aqui ya esta la parte de Store solo falta que nos den como la
información de cada una de las imagenes

--- a/index.html
+++ b/index.html
@@ -239,12 +239,35 @@
                 </div>
                <!-- Ends WWD4Y -->            
 
-                  <div class="menu-option-holder" data-module-type="page_columns" data-side="custom">
+                  <div class="menu-option-holder" >
 
                     <div id="menu-option-background" class="menu-option-background"> </div>
 
-                    <div id="menu-option-text" class="menu-option-text"><a href="#productos.html" data-path-href="html/our_projects/">STORE</a></div>
-
+                    <div id="menu-option-text" class="menu-option-text">
+                        <a href="#productos.html" data-path-href="html/our_projects/">STORE</a>
+                         <div class="menu-option-sign">+</div>
+                    </div>
+                    <div class="menu-option-sign">+</div>
+                    <div class="sub-menu-holder">
+                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text">
+                                <a data-path-href="html/our_projects/" href="#productos.html">Productos</a>
+                            </div>
+                        </div>
+                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text">
+                                <a data-path-href="html/our_projects/" href="#descargas.html">Descargas Gratuitas</a>
+                            </div>
+                        </div>
+                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text">
+                                <a data-path-href="html/our_projects/" href="#2_columns_projects.html">Presentación de Agencia</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>      
 
                 <div class="menu-option-holder" data-module-type="contact" data-side="custom">
