Martin Téllez Galindo
Cambios hasta el dia 15/02/2013

--- a/html/contact/contact.html
+++ b/html/contact/contact.html
@@ -528,7 +528,7 @@
 
                                         <div class="form-input-background opacity_2"></div>
 
-                                        <input id="name" type="text" name="name" value="nombre *"/>
+                                        <input id="name" type="text" name="name" placeholder="Nombre *"/>
 
                                     </div>
 
@@ -536,7 +536,7 @@
 
                                         <div class="form-input-background opacity_2"></div>
 
-                                        <input id="email" type="text" name="email" value="email *"/>
+                                        <input id="email" type="text" name="email" placeholder="Email *"/>
 
                                     </div>   
 
@@ -544,7 +544,7 @@
 
                                         <div class="form-input-background opacity_2"></div>
 
-                                        <input id="phone" type="text" name="phone" value="teléfono *"/>
+                                        <input id="phone" type="text" name="phone" placeholder ="Teléfono *";/>
 
                                     </div>
 
@@ -552,7 +552,7 @@
 
                                         <div class="form-input-background opacity_2"></div>
 
-                                        <textarea id="message" name="message">mensaje *</textarea>
+                                        <textarea id="message" name="message" placeholder ="Mensaje *"></textarea>
 
                                     </div>
 
