--- a/html/our_projects/descargas.html
+++ b/html/our_projects/descargas.html
@@ -873,11 +873,13 @@
 
                                             <p>Wallpapers</p>
 
-                                            <span>Etiam viverra, sem sit amet convallis posuere, ante velit congue dolor, vitae semper tortor diam in sapien. Cras pulvinar, justo id hendrerit congue, est ante elementum lectus, vitae rutrum justo quam ut lectus. </span>
+                                            <span>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas1.zip">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip">Gideas 1200px</a></br><br><br>
+                                            </span>
 
-                                            <span>Sed sit amet leo sit amet nisl dignissim sagittis. Donec semper arcu augue. In eget erat nibh, vel venenatis metus. Donec fermentum arcu ac mauris viverra dictum. Duis venenatis turpis at nisl dictum pretium. Vestibulum sollicitudin nunc ut tortor sollicitudin bibendum. Proin convallis elit ac risus iaculis scelerisque. Nulla pellentesque mi dapibus ligula condimentum commodo porta metus fringilla. Nam venenatis est non ligula convallis vitae tempor eros tempus. </span>
-
-                                            <span>Suspendisse mollis feugiat consectetur. Suspendisse arcu nisl, vulputate ut laoreet ut, lacinia nec nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Praesent quis odio ligula, a dictum erat. Donec et pharetra lacus. </span>
+                                           
 
                                         </div>
 
@@ -889,13 +891,14 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p>Diseño Gráfico</p>
+                                            <p>Wallpapers</p>
 
-                                            <span>Etiam viverra, sem sit amet convallis posuere, ante velit congue dolor, vitae semper tortor diam in sapien. Cras pulvinar, justo id hendrerit congue, est ante elementum lectus, vitae rutrum justo quam ut lectus. </span>
+                                           <span>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas2.zip">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip">Gideas 1200px</a></br><br><br>
+                                            </span>
 
-                                            <span>Sed sit amet leo sit amet nisl dignissim sagittis. Donec semper arcu augue. In eget erat nibh, vel venenatis metus. Donec fermentum arcu ac mauris viverra dictum. Duis venenatis turpis at nisl dictum pretium. Vestibulum sollicitudin nunc ut tortor sollicitudin bibendum. Proin convallis elit ac risus iaculis scelerisque. Nulla pellentesque mi dapibus ligula condimentum commodo porta metus fringilla. Nam venenatis est non ligula convallis vitae tempor eros tempus. </span>
-
-                                            <span>Suspendisse mollis feugiat consectetur. Suspendisse arcu nisl, vulputate ut laoreet ut, lacinia nec nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Praesent quis odio ligula, a dictum erat. Donec et pharetra lacus. </span>
 
                                         </div>
 
@@ -907,13 +910,13 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p>Diseño 3D</p>
+                                            <p>Wallpapers</p>
 
-                                            <span>Etiam viverra, sem sit amet convallis posuere, ante velit congue dolor, vitae semper tortor diam in sapien. Cras pulvinar, justo id hendrerit congue, est ante elementum lectus, vitae rutrum justo quam ut lectus. </span>
-
-                                            <span>Sed sit amet leo sit amet nisl dignissim sagittis. Donec semper arcu augue. In eget erat nibh, vel venenatis metus. Donec fermentum arcu ac mauris viverra dictum. Duis venenatis turpis at nisl dictum pretium. Vestibulum sollicitudin nunc ut tortor sollicitudin bibendum. Proin convallis elit ac risus iaculis scelerisque. Nulla pellentesque mi dapibus ligula condimentum commodo porta metus fringilla. Nam venenatis est non ligula convallis vitae tempor eros tempus. </span>
-
-                                            <span>Suspendisse mollis feugiat consectetur. Suspendisse arcu nisl, vulputate ut laoreet ut, lacinia nec nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Praesent quis odio ligula, a dictum erat. Donec et pharetra lacus. </span>
+                                            <span>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas3.zip">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip">Gideas 1200px</a></br><br><br>
+                                            </span>
 
                                         </div>
 
@@ -931,11 +934,11 @@
 
                                             <p>Diseño Web</p>
 
-                                            <span>Etiam viverra, sem sit amet convallis posuere, ante velit congue dolor, vitae semper tortor diam in sapien. Cras pulvinar, justo id hendrerit congue, est ante elementum lectus, vitae rutrum justo quam ut lectus. </span>
-
-                                            <span>Sed sit amet leo sit amet nisl dignissim sagittis. Donec semper arcu augue. In eget erat nibh, vel venenatis metus. Donec fermentum arcu ac mauris viverra dictum. Duis venenatis turpis at nisl dictum pretium. Vestibulum sollicitudin nunc ut tortor sollicitudin bibendum. Proin convallis elit ac risus iaculis scelerisque. Nulla pellentesque mi dapibus ligula condimentum commodo porta metus fringilla. Nam venenatis est non ligula convallis vitae tempor eros tempus. </span>
-
-                                            <span>Suspendisse mollis feugiat consectetur. Suspendisse arcu nisl, vulputate ut laoreet ut, lacinia nec nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Praesent quis odio ligula, a dictum erat. Donec et pharetra lacus. </span>
+                                           <span>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas4.zip">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip">Gideas 1200px</a></br><br><br>
+                                            </span>
 
                                         </div>
 
