--- a/index.html
+++ b/index.html
@@ -270,6 +270,14 @@
                     </div>
                 </div>      
 
+                   <div class="menu-option-holder" data-module-type="full_width_gallery" data-side="custom">
+
+                    <div id="menu-option-background" class="menu-option-background"> </div>
+
+                    <div id="menu-option-text" class="menu-option-text"><a href="#projects2.html" data-path-href="html/projects/">PROJECTS</a></div>
+
+                </div>         
+
                 <div class="menu-option-holder" data-module-type="contact" data-side="custom">
 
                     <div id="menu-option-background" class="menu-option-background"> </div>
@@ -310,7 +318,7 @@
 
             </div>
 
-			<div id="audio-player" data-auto-play="true" data-player-opened="true" data-player-volume="0.6">
+			<!--<div id="audio-player" data-auto-play="true" data-player-opened="true" data-player-volume="0.6">
 
                 <div id="audio-items">
 
@@ -397,8 +405,8 @@
                     </div>                    
 
                 </div>
+            </div>-->
 
-            </div>
 
             <footer>    
 
