--- a/index.html
+++ b/index.html
@@ -204,38 +204,11 @@
                 </div> 
 
                <!--Begin WWD4Y -->
-               <div class="menu-option-holder">
-                    <div class="menu-option-background"></div>
-                    <div class="menu-option-text">
-                    	<a data-path-href="html/contact/" href="#contact.html">What We Do 4 You?</a>
-                        <div class="menu-option-sign">+</div>
-                    </div>
-                    <div class="sub-menu-holder">
-                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
-                            <div class="sub-menu-option-background"> </div>
-                            <div class="sub-menu-option-text">
-                            	<a data-path-href="html/our_projects/" href="#4_columns_projects.html">High Impact</a>
-                            </div>
-                        </div>
-                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
-                            <div class="sub-menu-option-background"> </div>
-                            <div class="sub-menu-option-text">
-                            	<a data-path-href="html/our_projects/" href="#3_columns_projects.html">hiGh Interaction</a>
-                            </div>
-                        </div>
-                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
-                            <div class="sub-menu-option-background"> </div>
-                            <div class="sub-menu-option-text">
-                            	<a data-path-href="html/our_projects/" href="#2_columns_projects.html">hiGh Promotion</a>
-                            </div>
-                        </div>
-                        <div data-side="custom" data-module-type="page_columns" class="sub-menu-option-holder">
-                           <div class="sub-menu-option-background"> </div>
-                           <div class="sub-menu-option-text">
-                               <a data-path-href="html/our_projects/" href="#2_columns_projects.html">higH Entertainment </a>
-                           </div>
-                        </div>
-                    </div>
+               <div data-side="none" data-module-type="slideshow" class="menu-option-holder">
+                    <div class="menu-option-background" id="menu-option-background"> </div>
+                    <div class="menu-option-text" id="menu-option-text">
+                       <a data-path-href="html/home/" href="#home_layout_1.html" >What We Do 4 You?</a>
+                    </div>                
                 </div>
                <!-- Ends WWD4Y -->            
 
