--- a/html/projects/projects2.html
+++ b/html/projects/projects2.html
@@ -1183,6 +1183,29 @@
 
                     <div id="preview-media-image" data-url="assets/media/portfolio/images/image18.jpg" data-title="" data-alt=""></div>
 
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image13.jpg" data-title="" data-alt=""></div>                    
+
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image14.jpg" data-title="" data-alt=""></div>
+
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image15.jpg" data-title="" data-alt=""></div>
+
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image16.jpg" data-title="" data-alt=""></div>   
+
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image16.jpg" data-title="" data-alt=""></div>
+
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image18.jpg" data-title="" data-alt=""></div>
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image16.jpg" data-title="" data-alt=""></div>   
+
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image17.jpg" data-title="" data-alt=""></div>
+
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image18.jpg" data-title="" data-alt=""></div>
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image16.jpg" data-title="" data-alt=""></div>   
+
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image17.jpg" data-title="" data-alt=""></div>
+
+                    <div id="preview-media-image" data-url="assets/media/portfolio/images/image18.jpg" data-title="" data-alt=""></div>
+
+
                 </div>            
 
             </div>
@@ -1238,7 +1261,7 @@
 
                             <span>Pellentesque diam lectus, dapibus non lacinia in, vulputate sit amet dolor. Vivamus sollicitudin nunc sed augue lobortis at elementum nulla tristique.</span>
 
-                            <span>Vivamus porta, mi non vestibulum semper, massa nisl commodo est, quis fermentum nisi risus in erat. Phasellus sed nulla vel enim mattis tristique. Ut condimentum sodales leo, et mattis urna vulputate ut. </span>
+                            <span >Vivamus porta, mi non vestibulum semper, massa nisl commodo est, quis fermentum nisi risus in erat. Phasellus sed nulla vel enim mattis tristique. Ut condimentum sodales leo, et mattis urna vulputate ut. </span>
 
                         </div>
 
@@ -1432,6 +1455,121 @@
                             <div class="custom-separator"></div>
 
                             <span>Pellentesque diam lectus, dapibus non lacinia in, vulputate sit amet dolor. Vivamus sollicitudin nunc sed augue lobortis at elementum nulla tristique.</span>
+
+                            <span>Vivamus porta, mi non vestibulum semper, massa nisl commodo est, quis fermentum nisi risus in erat. Phasellus sed nulla vel enim mattis tristique. Ut condimentum sodales leo, et mattis urna vulputate ut. </span>
+
+                        </div>
+                        <div class="full-width-info-holder-desc">
+
+                            <p>NIVEA</p>
+
+                            <div class="custom-separator"></div>
+
+                            <span>Pellentesque diam lectus, dapibus non lacinia in, vulputate sit amet dolor. Vivamus sollicitudin nunc sed augue lobortis at elementum nulla tristique.</span>
+
+                            <span>Vivamus porta, mi non vestibulum semper, massa nisl commodo est, quis fermentum nisi risus in erat. Phasellus sed nulla vel enim mattis tristique. Ut condimentum sodales leo, et mattis urna vulputate ut. </span>
+
+                        </div>
+
+                        <div class="full-width-info-holder-desc">
+
+                            <p>CINÉPOLIS VIP</p>
+
+                            <div class="custom-separator"></div>
+
+                            <span>Pellentesque diam lectus, dapibus non lacinia in, vulputate sit amet dolor. Vivamus sollicitudin nunc sed augue lobortis at elementum nulla tristique.</span>
+
+                            <span>Vivamus porta, mi non vestibulum semper, massa nisl commodo est, quis fermentum nisi risus in erat. Phasellus sed nulla vel enim mattis tristique. Ut condimentum sodales leo, et mattis urna vulputate ut. </span>
+
+                        </div>
+                        <div class="full-width-info-holder-desc">
+
+                            <p>NIVEA</p>
+
+                            <div class="custom-separator"></div>
+
+                            <span>Pellentesque diam lectus, dapibus non lacinia in, vulputate sit amet dolor. Vivamus sollicitudin nunc sed augue lobortis at elementum nulla tristique.</span>
+
+                            <span>Vivamus porta, mi non vestibulum semper, massa nisl commodo est, quis fermentum nisi risus in erat. Phasellus sed nulla vel enim mattis tristique. Ut condimentum sodales leo, et mattis urna vulputate ut. </span>
+
+                        </div>
+
+                        <div class="full-width-info-holder-desc">
+
+                            <p>CINÉPOLIS VIP</p>
+
+                            <div class="custom-separator"></div>
+
+                            <span>Pellentesque diam lectus, dapibus non lacinia in, vulputate sit amet dolor. Vivamus sollicitudin nunc sed augue lobortis at elementum nulla tristique.</span>
+
+                            <span>Vivamus porta, mi non vestibulum semper, massa nisl commodo est, quis fermentum nisi risus in erat. Phasellus sed nulla vel enim mattis tristique. Ut condimentum sodales leo, et mattis urna vulputate ut. </span>
+
+                        </div>
+                        <div class="full-width-info-holder-desc">
+
+                            <p>NIVEA</p>
+
+                            <div class="custom-separator"></div>
+
+                            <span>"HOMBRE-PANTALLAS"</br> ACTIVACIONES EN AUTOSERVICIO</span>
+
+                            <span>Imaginando un mundo donde hacer el súper es divertido con Kellogg's.</span>
+
+                        </div>
+
+                        <div class="full-width-info-holder-desc">
+
+                            <p>CINÉPOLIS VIP</p>
+
+                            <div class="custom-separator"></div>
+
+                            <span>"HOMBRE-PANTALLAS"</br> ACTIVACIONES EN AUTOSERVICIO</span>
+
+                            <span>Imaginando un mundo donde hacer el súper es divertido con Kellogg's. </span>
+
+                        </div>
+                        <div class="full-width-info-holder-desc">
+
+                            <p>NIVEA</p>
+
+                            <div class="custom-separator"></div>
+
+                            <span>"HOMBRE-PANTALLAS"</br> ACTIVACIONES EN AUTOSERVICIO</span>
+
+                            <span>Imaginando un mundo donde hacer el súper es divertido con Kellogg's. </span>
+
+                        </div>
+
+                        <div class="full-width-info-holder-desc">
+
+                            <p>KELLOGG'S</p>
+
+                            <div class="custom-separator"></div>
+
+                            <span>"HOMBRE-PANTALLAS"</br> ACTIVACIONES EN AUTOSERVICIO</span>
+
+                            <span>Imaginando un mundo donde hacer el súper es divertido con Kellogg's. </span>
+
+                        </div>
+                        <div class="full-width-info-holder-desc">
+
+                            <p>kELLOSGS</p>
+
+                            <div class="custom-separator"></div>
+
+                            <span>"HOMBRE-PANTALLAS"</br> ACTIVACIONES EN AUTOSERVICIO</span>
+
+                            <span>Imaginando un mundo donde hacer el súper es divertido con Kellogg's.  </span>
+
+                        </div>
+
+                        <div class="full-width-info-holder-desc">
+
+                            <p>CINÉPOLIS VIP</p>
+
+                            <div class="custom-separator"></div>
+
+                            <span>"HOMBRE-PANTALLAS"</br> ACTIVACIONES EN AUTOSERVICIO</span>
 
                             <span>Vivamus porta, mi non vestibulum semper, massa nisl commodo est, quis fermentum nisi risus in erat. Phasellus sed nulla vel enim mattis tristique. Ut condimentum sodales leo, et mattis urna vulputate ut. </span>
 
