What we do 4 you
-Menú de navegación con subcategorías de What We do 4 you.
-HighImpact page.

--- a/index.html
+++ b/index.html
@@ -174,11 +174,18 @@
                             <div class="sub-menu-option-text"><a href="#ethics.html" data-path-href="html/about_us/">We’re Gideas </a></div>
 
                         </div>
-                          <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height">
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height">
 
                             <div class="sub-menu-option-background"> </div>
 
                             <div class="sub-menu-option-text"><a href="#pow.html" data-path-href="html/about_us/">PO.W </a></div>
+
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#p2.html" data-path-href="html/about_us/">PO.W </a></div>
 
                         </div>
 
@@ -207,10 +214,11 @@
                <div data-side="none" data-module-type="slideshow" class="menu-option-holder">
                     <div class="menu-option-background" id="menu-option-background"> </div>
                     <div class="menu-option-text" id="menu-option-text">
-                       <a data-path-href="html/home/" href="#home_layout_1.html" >What We Do 4 You?</a>
+                       <a data-path-href="html/our_projects/" href="#whatwedo.html" >What We Do 4 You?</a>
                     </div>                
                 </div>
-               <!-- Ends WWD4Y -->            
+               <!-- Ends WWD4Y -->  
+                         
 
                   <div class="menu-option-holder" >
 
