--- a/html/about_us/p2.html
+++ b/html/about_us/p2.html
@@ -486,7 +486,7 @@
 
         <div id="module-background-holder">
 
-    		<img src="assets/media/about_us/ethics/backgroundEthics.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
+    		<img src="assets/media/home/home_layout1/images/image1.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
 
         </div>	
 
@@ -508,7 +508,7 @@
 
                     	<div class="media-holder">
 
-                        	<img src="assets/media/about_us/ethics/ethics_image.jpg" width="100%" class="opacity_0" onload="animateThumb(this)"/>
+                        	<img src="assets/media/home/home_layout1/images/header1.png" width="100%" class="opacity_0" onload="animateThumb(this)"/>
 
                         </div>
 
