--- a/html/about_us/p2.html
+++ b/html/about_us/p2.html
@@ -516,11 +516,17 @@
 
                         <div class="main-text-holder">
 
-                        	<p>Pellentesque diam lectus, dapibus non lacinia in, vulputate sit amet dolor. Vivamus sollicitudin nunc sed augue lobortis at elementum nulla tristique. Sed elit elit, adipiscing eget molestie vulputate, euismod vitae mi. Proin posuere volutpat congue. Proin posuere volutpat congue.</p>
+                        	<p>Desarrollamos ideas, estrategias y ejecuciones para asombrar con lo inesperado,impresionar con lo espectacular  intrigar con  el misterio.</p>
 
-                            <p>Phasellus rhoncus, nunc vel lobortis faucibus, arcu elit rutrum metus, ut molestie nisi nisl ac ligula. Etiam eget nibh non tellus commodo adipiscing. Quisque pharetra lorem nec massa ornare rhoncus. Vivamus auctor aliquet lacus, adipiscing dignissim lectus volutpat sed. Maecenas viverra sapien et mi venenatis dignissim egestas justo posuere. Morbi hendrerit aliquam diam a rhoncus. Vivamus luctus aliquam orci vitae semper. Ut euismod dui quis orci mattis luctus. Maecenas pharetra imperdiet massa, aliquam ullamcorper nunc eleifend vitae. Nulla iaculis nulla sed erat mattis pulvinar. Suspendisse potenti.</p>
+                            <p>
+                                <ul class="redlist">
+                                    <li>GUERRILLA MKTG ,</li>
+                                    <li>AMBIENT MKTG,</li>
+                                    <li>VIRAL MKTG ,</li>
+                                    <li>OOH, PRINT, RADIO, TV.</li>
 
-                            <p>Aliquam erat volutpat. Suspendisse interdum, nisl eu vestibulum fringilla, sapien diam euismod erat, vitae vulputate mauris enim vitae libero. Aenean consectetur tempus nisi, eget viverra nisl gravida vitae. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                                </ul>
+                            </p>
 
                             
 
