--- a/index.html
+++ b/index.html
@@ -185,11 +185,30 @@
 
                             <div class="sub-menu-option-background"> </div>
 
-                            <div class="sub-menu-option-text"><a href="#p2.html" data-path-href="html/about_us/">PO.W </a></div>
+                            <div class="sub-menu-option-text"><a href="#p2.html" data-path-href="html/about_us/">HIgh Impact</a></div>
 
                         </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
 
+                            <div class="sub-menu-option-background"> </div>
 
+                            <div class="sub-menu-option-text"><a href="#p3.html" data-path-href="html/about_us/">High Interaction </a></div>
+
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#p4.html" data-path-href="html/about_us/">HIgh Promotion </a></div>
+
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#p5.html" data-path-href="html/about_us/">High Entertainment </a></div>
+
+                        </div>
                     </div>
 
                 </div>
