--- a/index.html
+++ b/index.html
@@ -210,21 +210,20 @@
 
                 </div>
 
-                <div class="menu-option-holder" data-module-type="news" data-side="height">
+              
 
-                    <div id="menu-option-background" class="menu-option-background"> </div>
+              
 
-                    <div id="menu-option-text" class="menu-option-text"><a href="#news.html" data-path-href="html/news/">NOTICIAS</a></div>
-
-                </div>  
-
+                   <!--Begin Philosophy-->
                 <div class="menu-option-holder" data-module-type="full_width_gallery" data-side="none">
 
                     <div id="menu-option-background" class="menu-option-background"> </div>
 
-                    <div id="menu-option-text" class="menu-option-text"><a href="#portfolio.html" data-path-href="html/portfolio/">PORTAFOLIO</a></div>
+                    <div id="menu-option-text" class="menu-option-text"><a href="#philosophy.html" data-path-href="html/about_us/">PHILOSOPHY</a></div>
 
                 </div> 
+                <!-- Ends Philosophy--> 
+
 
                <!--Begin WWD4Y -->
                <div data-side="none" data-module-type="slideshow" class="menu-option-holder">
@@ -274,6 +273,14 @@
                     <div id="menu-option-text" class="menu-option-text"><a href="#projects2.html" data-path-href="html/projects/">PROJECTS</a></div>
 
                 </div>         
+
+                <div class="menu-option-holder" data-module-type="full_width_gallery" data-side="none">
+
+                    <div id="menu-option-background" class="menu-option-background"> </div>
+
+                    <div id="menu-option-text" class="menu-option-text"><a href="#people.html" data-path-href="html/portfolio/">PEOPLE</a></div>
+
+                </div>     
 
                 <div class="menu-option-holder" data-module-type="contact" data-side="custom">
 
