--- a/html/our_projects/whatwedo.html
+++ b/html/our_projects/whatwedo.html
@@ -494,31 +494,26 @@
 
         	<div class="slideshow-slide">
 
-            	<img src="assets/media/home/home_layout1/images/image1.jpg" onload="onFirstMediaLoaded()"  id="slide-current" alt="" />
+            	<a href="#p2.html"><img src="assets/media/home/home_layout1/images/image1.jpg" onload="onFirstMediaLoaded()"  id="slide-current" alt="" /></a>
 
             </div>
 
             <div class="slideshow-slide">
 
-                <div id="slide-src" data-src="assets/media/home/home_layout1/images/image2.jpg"></div>
+                <a href="#p3.html"><div id="slide-src" data-src="assets/media/home/home_layout1/images/image2.jpg"></div></a>
 
             </div>
 
             <div class="slideshow-slide">
 
-                <div id="slide-src" data-src="assets/media/home/home_layout1/images/image3.jpg"></div>  
+                <a href="#p4.html"><div id="slide-src" data-src="assets/media/home/home_layout1/images/image3.jpg"></div></a>  
 
             </div>
 
             <div class="slideshow-slide">
 
-                <div id="slide-src" data-src="assets/media/home/home_layout1/images/image4.jpg"></div>
+                <a href="#p5.html"><div id="slide-src" data-src="assets/media/home/home_layout1/images/image4.jpg"></div></a>
 
-                <div id="slideshow-captions">
-
-                     
-
-                </div>
 
             </div>
 
