Cambios en estilos y plantillas
-Cambios en hoja de estilos correspondientes al texto en subsecciones de
"what we do 4 you".
-Menú de navegación de subsecciones en cada una de las mismas.

--- a/html/about_us/p2.html
+++ b/html/about_us/p2.html
@@ -483,7 +483,12 @@
 
 
     <div id="module-container"><!-- start #module-container -->
-
+         <div id="filter-buttons-holder" class="whatwedomenu">
+            <div class="filter-button selected active">High Impact</div>
+            <div class="filter-button selected"><a href="#p3.html">hIgh Interaction</a></div>
+            <div class="filter-button selected"><a href="#p4.html">hiGh Promotiont</a></div>
+            <div class="filter-button selected"><a href="#p5.html">higH Entertainment</a></div>
+        </div>
         <div id="module-background-holder">
 
     		<img src="assets/media/home/home_layout1/images/image1.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
@@ -500,7 +505,7 @@
 
                         <div class="title-holder">
 
-                        	<span class="title-text_normal">¿QUIÉNES SOMOS?</span>
+                        	<span class="title-text_normal wwd_title">¿QUIÉNES SOMOS?</span>
 
                         </div>
 
@@ -518,14 +523,11 @@
 
                         	<p>Desarrollamos ideas, estrategias y ejecuciones para asombrar con lo inesperado,impresionar con lo espectacular  intrigar con  el misterio.</p>
 
-                            <p>
-                                <ul class="redlist">
-                                    <li>GUERRILLA MKTG ,</li>
-                                    <li>AMBIENT MKTG,</li>
-                                    <li>VIRAL MKTG ,</li>
-                                    <li>OOH, PRINT, RADIO, TV.</li>
-
-                                </ul>
+                            <p class="redlist">
+                                    GUERRILLA MKTG ,<br />
+                                    AMBIENT MKTG,<br />
+                                    VIRAL MKTG ,<br />
+                                    OOH, PRINT, RADIO, TV.<br />
                             </p>
 
                             
