--- a/html/about_us/p3.html
+++ b/html/about_us/p3.html
@@ -483,7 +483,12 @@
 
 
     <div id="module-container"><!-- start #module-container -->
-
+         <div id="filter-buttons-holder" class="whatwedomenu">
+            <div class="filter-button selected"><a href="#p2.html">High Impact</a></div>
+            <div class="filter-button selected active">hIgh Interaction</div>
+            <div class="filter-button selected"><a href="#p4.html">hiGh Promotiont</a></div>
+            <div class="filter-button selected"><a href="#p5.html">higH Entertainment</a></div>
+        </div>
         <div id="module-background-holder">
 
     		<img src="assets/media/home/home_layout1/images/image2.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
@@ -500,7 +505,7 @@
 
                         <div class="title-holder">
 
-                        	<span class="title-text_normal">¿QUIÉNES SOMOS?</span>
+                        	<span class="title-text_normal wwd_title">¿QUIÉNES SOMOS?</span>
 
                         </div>
 
@@ -517,16 +522,12 @@
                         <div class="main-text-holder">
                             <p>Creamos ideas, estrategias y ejecuciones con una comunicación a 2 vías,  a la altura de tu universo.</p>
 
-                            <p>
-                                <ul class="redlist">
-                                    <li>SOCIAL MEDIA MARKETING,</li>
-                                    <li>APPS & , WEBSITES,</li>
-                                    <li>AMBASSADORS & INSIDERS PLANS,</li> 
-                                    <li>SPECIAL EVENTS,</li>
-                                    <li>BRAND EXPERIENCIES.</li>
-
-
-                                </ul>
+                            <p class="redlist">
+                                    SOCIAL MEDIA MARKETING,<br />
+                                    APPS & , WEBSITES,<br />
+                                    AMBASSADORS & INSIDERS PLANS,<br /> 
+                                    SPECIAL EVENTS,<br />
+                                    BRAND EXPERIENCIES.<br />
                             </p>
                         	 
 
