--- a/html/about_us/p4.html
+++ b/html/about_us/p4.html
@@ -483,7 +483,12 @@
 
 
     <div id="module-container"><!-- start #module-container -->
-
+         <div id="filter-buttons-holder" class="whatwedomenu">
+            <div class="filter-button selected"><a href="#p2.html">High Impact</a></div>
+            <div class="filter-button selected"><a href="#p3.html">hIgh Interaction</a></div>
+            <div class="filter-button selected active">hiGh Promotiont</div>
+            <div class="filter-button selected"><a href="#p5.html">higH Entertainment</a></div>
+        </div>
         <div id="module-background-holder">
 
     		<img src="assets/media/home/home_layout1/images/image3.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
@@ -500,7 +505,7 @@
 
                         <div class="title-holder">
 
-                        	<span class="title-text_normal">¿QUIÉNES SOMOS?</span>
+                        	<span class="title-text_normal wwd_title">¿QUIÉNES SOMOS?</span>
 
                         </div>
 
@@ -518,16 +523,14 @@
 
                         	<p>Implementamos ideas y  estrategias, capaces de generar trial & brand advocacy, brindando una mezcla cautivadora de beneficios tangibles y vivenciales.</p>
 
-                            <p>
-                                <ul class="redlist">
-                                    <li>POP MATERIALS,</li>
-                                    <li>STANDS & DISPLAY,</li>
-                                    <li>SAMPLING &   DEMONSTRATION PLANS,</li> 
-                                    <li>IN-STORE ACTIVATIONS,</li> 
-                                    <li>ON/OFFLINE PROMOTIONS,</li>
-                                    <li>DIRECT MARKETING,</li> 
-                                    <li>LOYALTY PROGRAMS</li>
-                                </ul>
+                            <p class="redlist">
+                                    POP MATERIALS,<br />
+                                    STANDS & DISPLAY,<br />
+                                    SAMPLING &   DEMONSTRATION PLANS, <br />
+                                    IN-STORE ACTIVATIONS,<br />
+                                    ON/OFFLINE PROMOTIONS,<br />
+                                    DIRECT MARKETING, <br />
+                                    LOYALTY PROGRAMS
                             </p>
 
                         </div>
