--- a/html/our_projects/p2.html
+++ b/html/our_projects/p2.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 
@@ -483,15 +483,10 @@
 
 
     <div id="module-container"><!-- start #module-container -->
-         <div id="filter-buttons-holder" class="whatwedomenu">
-            <div class="filter-button selected"><a href="#p2.html">High Impact</a></div>
-            <div class="filter-button selected"><a href="#p3.html">hIgh Interaction</a></div>
-            <div class="filter-button selected"><a href="#p4.html">hiGh Promotiont</a></div>
-            <div class="filter-button selected active">higH Entertainment</div>
-        </div>
+
         <div id="module-background-holder">
 
-    		<img src="assets/media/home/home_layout1/images/image4.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
+    		<img src="assets/media/about_us/ethics/backgroundEthics.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
 
         </div>	
 
@@ -505,7 +500,7 @@
 
                         <div class="title-holder">
 
-                        	<span class="title-text_normal wwd_title">¿QUIÉNES SOMOS?</span>
+                        	<span class="title-text_normal">¿QUIÉNES SOMOS?</span>
 
                         </div>
 
@@ -513,24 +508,20 @@
 
                     	<div class="media-holder">
 
-                        	<img src="assets/media/home/home_layout1/images/header3.png" width="100%" class="opacity_0" onload="animateThumb(this)"/>
+                        	<img src="assets/media/about_us/ethics/ethics_image.jpg" width="100%" class="opacity_0" onload="animateThumb(this)"/>
 
                         </div>
 
                         <div class="custom-separator"></div>
 
                         <div class="main-text-holder">
-                            <p>Creamos experiencias de marca siempre capaces de provocarte lo que menos de esperarías de la publicidad: una sonrisa.</p>
 
-                            <p class="redlist">
-                                    BRAND VIDEOS <br />
-                                    ADVERGAMES, <br />
-                                    STREET PERFOMANCES,<br />
-                                    SPORTS MARKETING;<br />
-                                    EXPO & CONVENTIONS,<br />
-                                    BOOKING & TALENT MANAGEMENT,<br />
-  
-                            </p>
+                        	<p>Pellentesque diam lectus, dapibus non lacinia in, vulputate sit amet dolor. Vivamus sollicitudin nunc sed augue lobortis at elementum nulla tristique. Sed elit elit, adipiscing eget molestie vulputate, euismod vitae mi. Proin posuere volutpat congue. Proin posuere volutpat congue.</p>
+
+                            <p>Phasellus rhoncus, nunc vel lobortis faucibus, arcu elit rutrum metus, ut molestie nisi nisl ac ligula. Etiam eget nibh non tellus commodo adipiscing. Quisque pharetra lorem nec massa ornare rhoncus. Vivamus auctor aliquet lacus, adipiscing dignissim lectus volutpat sed. Maecenas viverra sapien et mi venenatis dignissim egestas justo posuere. Morbi hendrerit aliquam diam a rhoncus. Vivamus luctus aliquam orci vitae semper. Ut euismod dui quis orci mattis luctus. Maecenas pharetra imperdiet massa, aliquam ullamcorper nunc eleifend vitae. Nulla iaculis nulla sed erat mattis pulvinar. Suspendisse potenti.</p>
+
+                            <p>Aliquam erat volutpat. Suspendisse interdum, nisl eu vestibulum fringilla, sapien diam euismod erat, vitae vulputate mauris enim vitae libero. Aenean consectetur tempus nisi, eget viverra nisl gravida vitae. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+
                             
 
                         </div>
